roles/esf_setup/files/iptables
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:input-kura - [0:0]
:output-kura - [0:0]
:forward-kura - [0:0]
:forward-kura-pf - [0:0]
:forward-kura-ipf - [0:0]
-I INPUT -j input-kura
-I OUTPUT -j output-kura
-I FORWARD -j forward-kura
-I forward-kura -j forward-kura-pf
-I forward-kura -j forward-kura-ipf
-A input-kura -i lo -j ACCEPT
-A input-kura -m state --state RELATED,ESTABLISHED -j ACCEPT
-A input-kura -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A output-kura -p icmp -m icmp --icmp-type 0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A input-kura -p tcp -s 0.0.0.0/0 -i eno1 --dport 22 -j ACCEPT
-A input-kura -p tcp -s 10.234.0.0/16 -i tun0 --dport 22 -j ACCEPT
-A input-kura -p tcp -s 0.0.0.0/0 -i eno1 --dport 443 -j ACCEPT
-A input-kura -p tcp -s 10.234.0.0/16 -i tun0 --dport 443 -j ACCEPT
-A input-kura -p tcp -s 127.0.0.1/32 -i lo --dport 2947 -j ACCEPT
-A input-kura -p tcp -s 0.0.0.0/0 -i eno1 --dport 4443 -j ACCEPT
-A input-kura -p tcp -s 10.234.0.0/16 -i tun0 --dport 4443 -j ACCEPT
-A input-kura -p udp -s 0.0.0.0/0 -i eno1 --dport 53 -j ACCEPT
-A input-kura -p udp -s 0.0.0.0/0 -i eno1 --dport 67 -j ACCEPT
-A input-kura -p udp -s 0.0.0.0/0 -i wlp1s0 --dport 53 -j ACCEPT
-A input-kura -p udp -s 0.0.0.0/0 -i wlp1s0 --dport 67 -j ACCEPT
-A input-kura -p udp -s 0.0.0.0/0 -i eno1 --dport 5353 -j ACCEPT
-A input-kura -j RETURN
-A output-kura -j RETURN
-A forward-kura -j RETURN
-A forward-kura-pf -j RETURN
-A forward-kura-ipf -j RETURN
COMMIT
*nat
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:prerouting-kura - [0:0]
:prerouting-kura-pf - [0:0]
:postrouting-kura - [0:0]
:postrouting-kura-pf - [0:0]
:postrouting-kura-ipf - [0:0]
:input-kura - [0:0]
:output-kura - [0:0]
-I PREROUTING -j prerouting-kura
-I prerouting-kura -j prerouting-kura-pf
-I POSTROUTING -j postrouting-kura
-I postrouting-kura -j postrouting-kura-pf
-I postrouting-kura -j postrouting-kura-ipf
-I INPUT -j input-kura
-I OUTPUT -j output-kura
-A postrouting-kura -j RETURN
-A postrouting-kura-pf -j RETURN
-A postrouting-kura-ipf -j RETURN
-A prerouting-kura -j RETURN
-A prerouting-kura-pf -j RETURN
-A input-kura -j RETURN
-A output-kura -j RETURN
COMMIT
*mangle
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:prerouting-kura - [0:0]
:postrouting-kura - [0:0]
:input-kura - [0:0]
:output-kura - [0:0]
:forward-kura - [0:0]
-I PREROUTING -j prerouting-kura
-I POSTROUTING -j postrouting-kura
-I INPUT -j input-kura
-I OUTPUT -j output-kura
-I FORWARD -j forward-kura
-A postrouting-kura -j RETURN
-A prerouting-kura -j RETURN
-A input-kura -j RETURN
-A output-kura -j RETURN
-A forward-kura -j RETURN
COMMIT
